--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -69,4 +69,4 @@ jobs:
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: cd ssilman-app;terraform apply -auto-approve -input=false
