trying again - debug

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -20,8 +20,9 @@ jobs:
     - name: Terraform Init
       run: terraform init
       env:
+        ACTIONS_RUNNER_DEBUG: true
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        TF_ACTION_WORKING_DIR: 'ssilman-app'
+        TF_ACTION_WORKING_DIR: '.'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         
@@ -31,7 +32,8 @@ jobs:
     - name: Terraform Apply
       run: terraform apply -auto-approve
       env:
+        ACTIONS_RUNNER_DEBUG: true
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        TF_ACTION_WORKING_DIR: 'ssilman-app'
+        TF_ACTION_WORKING_DIR: '.'
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
