--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,6 +31,7 @@ jobs:
     - name: Terraform Apply
       run: terraform -chdir="./ssilman-app" apply -auto-approve
       env:
+        ACTIONS_RUNNER_DEBUG: true
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -38,6 +39,7 @@ jobs:
     - name: Terraform Output
       run: terraform output -raw private_key
       env:
+        ACTIONS_RUNNER_DEBUG: true
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY:  ${{ secrets.AWS_SECRET_ACCESS_KEY }}
